Stopped flicker from occuring on firefox

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -427,12 +427,12 @@ button {
 
 @keyframes float {
 	0% {
-		opacity: 0.9;
-		transform: translate(0, 20rem) scaleY(1.2);
+		transform: translate(0, 28rem) scaleY(1.2);
+		opacity: 1;
 	}
 	100% {
-		opacity: 0.9;
 		transform: translate(0, -8rem) scaleY(1.2);
+		opacity: 1;
 	}
 }
 
@@ -450,18 +450,18 @@ button {
 	left: 0;
 	height: 20rem;
 	width: 20rem;
-	/* border: 1px solid black; */
 	overflow: hidden;
 	position: relative;
 	z-index: -4;
 }
 
 .balloon {
+	top: -8rem;
 	position: absolute;
 	height: 4rem;
 	width: 4rem;
 	border-radius: 100%;
-	animation: float 5s infinite linear, sway 1s ease-in-out infinite alternate;
+	animation: float 10s infinite linear, sway 1s ease-in-out infinite alternate;
 }
 
 .balloonString {
@@ -516,6 +516,7 @@ button {
 	border: 'none';
 	transition: 0.2s;
 	color: black;
+	z-index: 15;
 }
 
 .closePopUpWindow:hover {
